--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -24,7 +24,7 @@
 
         <ImageView
             android:id="@+id/ImageViewCardRicetta"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:src="@mipmap/ic_launcher" />
