--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -29,10 +29,11 @@
         <ImageView
             android:id="@+id/ImageViewCardRicetta"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@drawable/ic_baseline_add_24" />
-
+           android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/spoonacular" />
 
 
     </LinearLayout>
