--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -16,11 +16,12 @@
         app:cardMaxElevation="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/LayoutCardContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <SearchView
-                android:id="@+id/searchView"
+                android:id="@+id/searchViewMyRecipes"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -40,24 +41,14 @@
                 />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/textViewMyRecipes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="30dp"
                 android:text="@string/My_recipes_string"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchView" />
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:text="Button"
-                app:layout_constraintStart_toEndOf="@+id/textView4"
-                app:layout_constraintTop_toBottomOf="@+id/searchView" />
+                app:layout_constraintTop_toBottomOf="@+id/searchViewMyRecipes" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
@@ -67,14 +58,23 @@
                 app:layout_constraintGuide_begin="20dp" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/buttonFilter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
                 android:text="Button"
-                app:layout_constraintStart_toEndOf="@+id/searchView"
+                app:layout_constraintStart_toEndOf="@+id/searchViewMyRecipes"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toEndOf="@+id/textViewMyRecipes"
+                app:layout_constraintTop_toBottomOf="@+id/searchViewMyRecipes" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -83,11 +83,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:gravity="center"
-        android:horizontalSpacing="6dp"
+        android:horizontalSpacing="10dp"
         android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="6dp"
+        android:verticalSpacing="10dp"
         android:layout_below="@id/cardContainer"/>
 
 
