--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -81,6 +81,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
+                app:chipIcon="@drawable/ic_baseline_add_24"
+                android:text="@string/MyRecipes_chips_string"
                 app:layout_constraintStart_toEndOf="@+id/textViewMyRecipes"
                 app:layout_constraintTop_toBottomOf="@+id/searchViewMyRecipes" />
         </androidx.constraintlayout.widget.ConstraintLayout>
