--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -65,9 +65,10 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/filter_string"
                 android:textColor="@color/black"
+                android:backgroundTint="@color/main_color"
                 app:icon="@drawable/ic_baseline_filter_list_24"
                 app:iconTint="?attr/colorOnSecondary"
-                app:rippleColor="@color/main_color"
+                app:rippleColor="?attr/colorOnSecondary"
                 style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 app:layout_constraintStart_toEndOf="@+id/searchViewMyRecipes"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -82,6 +83,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 app:chipIcon="@drawable/ic_baseline_add_24"
+                app:chipBackgroundColor="@color/main_color"
                 android:text="@string/MyRecipes_chips_string"
                 app:layout_constraintStart_toEndOf="@+id/textViewMyRecipes"
                 app:layout_constraintTop_toBottomOf="@+id/searchViewMyRecipes" />
