--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -112,6 +112,17 @@
 
                     </com.google.android.material.card.MaterialCardView>
 
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="167dp"
+                        android:layout_height="112dp"
+                        android:layout_marginStart="9dp"
+                        android:layout_marginTop="10dp"
+                        android:theme="@style/Theme.MaterialComponents.Light"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="8dp">
+
+                    </com.google.android.material.card.MaterialCardView>
+
                 </LinearLayout>
 
             </HorizontalScrollView>
@@ -160,6 +171,17 @@
 
                     </com.google.android.material.card.MaterialCardView>
 
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="167dp"
+                        android:layout_height="112dp"
+                        android:layout_marginStart="9dp"
+                        android:layout_marginTop="10dp"
+                        android:theme="@style/Theme.MaterialComponents.Light"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="8dp">
+
+                    </com.google.android.material.card.MaterialCardView>
+
                 </LinearLayout>
 
             </HorizontalScrollView>
@@ -190,6 +212,17 @@
                         android:layout_width="167dp"
                         android:layout_height="112dp"
                         android:layout_marginStart="15dp"
+                        android:layout_marginTop="10dp"
+                        android:theme="@style/Theme.MaterialComponents.Light"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="8dp">
+
+                    </com.google.android.material.card.MaterialCardView>
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="167dp"
+                        android:layout_height="112dp"
+                        android:layout_marginStart="9dp"
                         android:layout_marginTop="10dp"
                         android:theme="@style/Theme.MaterialComponents.Light"
                         app:cardCornerRadius="8dp"
