--- a/app/src/main/res/layout/fragment_alimentar_preference.xml
+++ b/app/src/main/res/layout/fragment_alimentar_preference.xml
@@ -4,7 +4,7 @@
     android:id="@+id/alimentarPreferences"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AlimentarPreferenceFragment">
+    tools:context=".ui.AlimentarPreferenceFragment">
 
     <androidx.cardview.widget.CardView
         xmlns:app="http://schemas.android.com/apk/res-auto"
