--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -6,7 +6,7 @@
     android:id="@+id/MyRecepisFragmentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MyRecipesFragment" >
+    tools:context=".ui.MyRecipesFragment">
 
 
     <androidx.cardview.widget.CardView
@@ -28,18 +28,17 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="160dp"
+                android:background="@drawable/rounded_shape"
+                android:iconifiedByDefault="false"
                 android:queryHint="@string/search_string"
                 app:defaultQueryHint="@string/search_string"
-                android:iconifiedByDefault="false"
                 app:iconifiedByDefault="true"
-                android:background="@drawable/rounded_shape"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                />
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/textViewMyRecipes"
@@ -60,19 +59,19 @@
 
             <Button
                 android:id="@+id/buttonFilter"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
+                android:backgroundTint="@color/main_color"
                 android:text="@string/filter_string"
                 android:textColor="@color/black"
-                android:backgroundTint="@color/main_color"
                 app:icon="@drawable/ic_baseline_filter_list_24"
                 app:iconTint="?attr/colorOnSecondary"
-                app:rippleColor="?attr/colorOnSecondary"
-                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 app:layout_constraintStart_toEndOf="@+id/searchViewMyRecipes"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:rippleColor="?attr/colorOnSecondary" />
 
 
             <com.google.android.material.chip.Chip
@@ -81,9 +80,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                app:chipIcon="@drawable/ic_baseline_add_24"
-                app:chipBackgroundColor="@color/main_color"
                 android:text="@string/MyRecipes_chips_string"
+                app:chipBackgroundColor="@color/main_color"
+                app:chipIcon="@drawable/ic_baseline_add_24"
                 app:layout_constraintStart_toEndOf="@+id/textViewMyRecipes"
                 app:layout_constraintTop_toBottomOf="@+id/searchViewMyRecipes" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -93,16 +92,14 @@
         android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/cardContainer"
         android:layout_marginTop="10dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
         android:gravity="center"
         android:horizontalSpacing="10dp"
         android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
-       android:layout_below="@id/cardContainer"/>
-
-
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:verticalSpacing="10dp" />
 
 
 </RelativeLayout>
