--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_item"
     android:layout_width="match_parent"
@@ -11,22 +10,21 @@
     app:cardElevation="5dp"
 
     >
-     <!-- android:focusable="true" android:clickable="true" se li metto non va il log -->
+    <!-- android:focusable="true" android:clickable="true" se li metto non va il log -->
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:background="?android:selectableItemBackground"
-        >
+        android:orientation="vertical">
 
         <TextView
-        android:id="@+id/TextViewCardRicetta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textAlignment="center" />
+            android:id="@+id/TextViewCardRicetta"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textAlignment="center" />
 
 
         <ImageView
@@ -34,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-           android:adjustViewBounds="true"
+            android:adjustViewBounds="true"
             android:scaleType="fitXY"
             android:src="@drawable/spoonacular" />
 
