--- a/app/src/main/res/layout/fragment_alimentar_preference.xml
+++ b/app/src/main/res/layout/fragment_alimentar_preference.xml
@@ -6,65 +6,59 @@
     android:layout_height="match_parent"
     tools:context=".ui.AlimentarPreferenceFragment">
 
-    <androidx.cardview.widget.CardView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/checkboxContainerIntollerances"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:cardElevation="0dp"
-        app:cardMaxElevation="0dp"
-        >
+        app:cardMaxElevation="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/IntollerancesTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/intollerance_string"
-                android:id="@+id/IntollerancesTextView"
                 android:layout_marginLeft="5dp"
+                android:text="@string/intollerance_string" />
+
+            <CheckBox
+                android:id="@+id/checkBoxIntolleranceGluten"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/IntollerancesTextView"
+                android:text="@string/gluten_intolerance"
+
                 />
 
             <CheckBox
-            android:id="@+id/checkBoxIntolleranceGluten"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/gluten_intolerance"
-                android:layout_below="@id/IntollerancesTextView"
-
-                />
-
-        <CheckBox
-            android:id="@+id/checkBoxIntolleranceLactose"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/lactose_intollerance"
-            android:layout_below="@id/checkBoxIntolleranceGluten"
-            />
+                android:id="@+id/checkBoxIntolleranceLactose"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/checkBoxIntolleranceGluten"
+                android:text="@string/lactose_intollerance" />
 
             <CheckBox
                 android:id="@+id/checkBoxIntolleranceNuts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/nust_intollerance"
                 android:layout_below="@id/checkBoxIntolleranceLactose"
-                />
+                android:text="@string/nust_intollerance" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
 
-    <androidx.cardview.widget.CardView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardElevation="0dp"
-        app:cardMaxElevation="0dp"
+    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/checkboxContainerPreferences"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/checkboxContainerIntollerances"
         android:layout_marginTop="20dp"
+        app:cardElevation="0dp"
+        app:cardMaxElevation="0dp"
 
         >
 
@@ -73,36 +67,33 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/PreferencesTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/preferences_string"
-                android:id="@+id/PreferencesTextView"
                 android:layout_marginLeft="5dp"
-                />
+                android:text="@string/preferences_string" />
 
 
             <CheckBox
                 android:id="@+id/checkBoxPreferencesVegetarian"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/vegetarian_string"
-                android:layout_below="@id/PreferencesTextView"/>
+                android:layout_below="@id/PreferencesTextView"
+                android:text="@string/vegetarian_string" />
 
             <CheckBox
                 android:id="@+id/checkboxPreferencesVegan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/vegan_string"
                 android:layout_below="@id/checkBoxPreferencesVegetarian"
-                />
+                android:text="@string/vegan_string" />
 
             <CheckBox
                 android:id="@+id/checkBoxPreferencesPescetarian"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/pescetarian_string"
                 android:layout_below="@id/checkboxPreferencesVegan"
-                />
+                android:text="@string/pescetarian_string" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
@@ -112,12 +103,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:backgroundTint="@color/main_color"
-        android:textColor="@color/black"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/main_color"
         android:text="@string/save_string"
+        android:textColor="@color/black"
 
         />
 </RelativeLayout>
