--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -7,10 +7,7 @@
     android:layout_gravity="center"
     android:layout_margin="5dp"
     app:cardCornerRadius="5dp"
-    app:cardElevation="5dp"
-
-    >
-    <!-- android:focusable="true" android:clickable="true" se li metto non va il log -->
+    app:cardElevation="5dp">
 
 
     <LinearLayout
