--- a/app/src/main/res/layout/fragment_alimentar_preference.xml
+++ b/app/src/main/res/layout/fragment_alimentar_preference.xml
@@ -30,9 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/IntollerancesTextView"
-                android:text="@string/gluten_intolerance"
-
-                />
+                android:text="@string/gluten_intolerance" />
 
             <CheckBox
                 android:id="@+id/checkBoxIntolleranceLactose"
@@ -58,9 +56,7 @@
         android:layout_below="@id/checkboxContainerIntollerances"
         android:layout_marginTop="20dp"
         app:cardElevation="0dp"
-        app:cardMaxElevation="0dp"
-
-        >
+        app:cardMaxElevation="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -108,7 +104,5 @@
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/main_color"
         android:text="@string/save_string"
-        android:textColor="@color/black"
-
-        />
+        android:textColor="@color/black" />
 </RelativeLayout>
