--- a/app/src/main/res/layout/layout_step_dialog.xml
+++ b/app/src/main/res/layout/layout_step_dialog.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:text="STEP" />
+                android:text="@string/step_string" />
 
 
             <EditText
@@ -36,7 +36,7 @@
                 android:layout_marginRight="10dp"
                 android:background="@drawable/rounded_shape"
                 android:gravity="top"
-                android:hint="scrivi uno step"
+                android:hint="@string/step_hint_string"
                 android:inputType="textMultiLine"
                 android:maxHeight="48dp"
                 android:minHeight="48dp"
@@ -55,7 +55,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:minHeight="48dp"
-                android:text="add" />
+                android:text="@string/add_button" />
 
 
             <Button
@@ -66,7 +66,7 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="10dp"
                 android:layout_toLeftOf="@id/addStepButton"
-                android:text="delete" />
+                android:text="@string/delete_button" />
 
         </RelativeLayout>
 
