--- a/app/src/main/res/layout/item_step_recipe.xml
+++ b/app/src/main/res/layout/item_step_recipe.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="6dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginEnd="10dp">
+    android:layout_marginEnd="10dp"
+    card_view:cardElevation="0dp"
+    card_view:cardPreventCornerOverlap="false">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_n_step"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/cardview_shadow_start_color"
-            android:textSize="16sp"
-            android:text="@string/app_name"
             android:layout_gravity="center"
-            android:padding="6dp"/>
+            android:padding="0dp"
+            android:text="@string/app_name"
+            android:fontFamily="@font/poppins_black_italic"
+            android:textColor="#121212"
+            android:textSize="14dp" />
+
         <TextView
             android:id="@+id/tv_descripion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/cardview_shadow_start_color"
-            android:textSize="16sp"
-            android:text="@string/app_name"
             android:layout_gravity="center"
-            android:padding="6dp"/>
+            android:padding="6dp"
+            android:text="@string/app_name"
+            android:textColor="#121212"
+            android:textSize="14dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="10dp"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
