--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
-                android:backgroundTint="@color/main_color"
+                android:backgroundTint="@color/cookery_blue"
                 android:text="@string/filter_string"
                 android:textColor="@color/black"
                 app:icon="@drawable/ic_baseline_filter_list_24"
@@ -80,7 +80,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/MyRecipes_chips_string"
-                app:chipBackgroundColor="@color/main_color"
+                app:chipBackgroundColor="@color/cookery_blue"
                 app:chipIcon="@drawable/ic_baseline_add_24"
                 app:layout_constraintStart_toEndOf="@+id/textViewMyRecipes"
                 app:layout_constraintTop_toBottomOf="@+id/searchViewMyRecipes" />
