--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,15 +3,18 @@
     <item
         android:id="@+id/home"
         android:icon="@drawable/home"
-        android:title="@string/home" />
+        android:title="@string/home"
+        android:menuCategory="secondary"/>
 
     <item
         android:id="@+id/fridge"
         android:title="@string/fridge"
-        android:icon="@drawable/fridge"/>
+        android:icon="@drawable/fridge"
+        android:menuCategory="secondary"/>
 
     <item
         android:id="@+id/recipe"
         android:title="@string/recipe"
-        android:icon="@drawable/recipe"/>
+        android:icon="@drawable/recipe"
+        android:menuCategory="secondary"/>
 </menu>
