--- a/app/src/main/res/layout/activity_single_recipe.xml
+++ b/app/src/main/res/layout/activity_single_recipe.xml
@@ -66,8 +66,7 @@
                     android:id="@+id/textView_title_recipe"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Lasagna"
-                    android:textSize="45dp"
+                    android:textSize="35dp"
                     android:gravity="center"
                     app:layout_constraintBottom_toBottomOf="@+id/ButtonDeleteRecipe"
                     app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +84,8 @@
                     app:layout_constraintEnd_toStartOf="@+id/ButtonEditRecipe"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_action_delete"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    tools:ignore="SpeakableTextPresentCheck"
+                    android:visibility="gone"/>
 
                 <ImageButton
                     android:id="@+id/ButtonEditRecipe"
@@ -99,7 +99,8 @@
                     app:layout_constraintTop_toTopOf="@+id/ButtonDeleteRecipe"
                     app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ic_action_edit"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    tools:ignore="SpeakableTextPresentCheck"
+                    android:visibility="gone"/>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
